<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.hat.HatFragment">


    <TextView
        android:id="@+id/tvWelcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textColor="@color/main_header_color"
        android:textSize="@dimen/main_header_size" />

    <TextView
        android:id="@+id/tvWelcomeHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/main_subheader_color"
        android:textSize="@dimen/main_subheader_size" />

    <ImageView
        android:id="@+id/ivHatWelcome"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/welcome_image"
        android:src="@drawable/img_hat" />

    <EditText
        android:id="@+id/edTextWelcome"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/welcome_name_hint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWelcomeSelect"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:background="@drawable/main_button_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_select_faculty"
        android:textAllCaps="false"
        android:textColor="@color/secondary_text_color">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/tvWelcomeSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/welcome_selected"
        android:textColor="@color/primary_regular_color"
        android:textSize="@dimen/primary_text_size"
        android:visibility="gone">

    </TextView>


</LinearLayout>